# Razen-New

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURE_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JIT_COVERAGE_ANALYSIS.md  JIT_IMPROVEMENT_PLAN.md  LICENSE  MODULE_SYSTEM_IMPLEMENTATION.md  RAJIT_COMPLETE.md  RAJIT_STATUS.md  RAZEN_MATURITY_PLAN.md  RAZE_IMPLEMENTATION_PLAN.md  README.md  backend_pan.md  complex_test.rzn  comprehensive_jit_test.rzn  error.rzn  filetree.txt  hello.rzn  install.sh  run_benchmark.sh  simple_comparison.rzn  simple_if_test.rzn  simple_jit_test.rzn  steps.md  test-install.sh  test_all_operations.rzn  test_color.rzn  test_comprehensive.rzn  test_comprehensive_jit.rzn  test_diagnostics.rzn  test_errors.rzn  test_fstring.rzn  test_raze.rzn
benches/: performance_tests.rs
benchmarks/: arithmetic_heavy.rzn  array_operations_test.rzn  builtin_functions.rzn  enhanced_arithmetic.rzn  math_operations_test.rzn  mixed_operations.rzn  power_test.rzn  pure_arithmetic.rzn  pure_computation.rzn  simple_runtime.rzn  string_array_test.rzn  string_operations_test.rzn  string_support_test.rzn
docs/: README.md  getting-started.md  installation.md
docs/old-implementation/: CUSTOM_BACKEND_COMPLETE.md  (+2 more)
examples/: menu.rzn  server_with_routes.rzn  simple_web_server.rzn
extensions/: .gitignore
production/: version
src/: benchmark.rs  lib.rs  main.rs
tests/: assignment_operators_test.rzn  basic_features.rzn  basic_operators_test.rzn  basic_test.rzn  benchmark_loop.py  benchmark_loop.rzn  break_continue_test.rzn  bytecode_test.rzn  calculator.rzn  character_test.rzn  class-system-test.rzn  combo_test.rzn  complete_module_test.rzn  comprehensive_loops.rzn  comprehensive_operators_test.rzn  comprehensive_test.rzn  const_test.rzn  control_flow_test.rzn  data_structures_test.rzn  diagnostic_test.rzn  enhanced_error_test.rzn  escape_sequences_test.rzn  everything.rzn  final_data_structures_test.rzn  final_impl_test.rzn  float_features_test.rzn  for_loop.rzn  for_loop_array.rzn  for_loop_inclusive.rzn  higher_order_functions.rzn  impl_self_new_test.rzn  integer_conversion_test.rzn  lambda_simple.rzn  lambda_test.rzn  loop_break_continue.rzn  match_test.rzn  math_types.rzn  method_params_test.rzn  minimal-impl-test.rzn  mod.rs  (+64 more)
(+258 files in other folders)
