[package]
name = "razen-lang"
version = "0.1.8"
edition = "2024"

[dependencies]
# Professional CLI with minimal, well-maintained dependencies
clap = { version = "4.4", features = ["derive", "color"] }
# TOML parsing for razen.toml configuration files
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.176"
dynasmrt = "4.0.1"

[dev-dependencies]
# No dev dependencies needed for now
